# os2mo-helm-chart

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  NEWS.md  README.md  RELEASE.md  cluster-config.yaml  kind-override-values.yaml  mkdocs.yml  pyproject.toml  start.sh
.reuse/: dep5
chart/: Chart.yaml  kind-override-values.yaml  values.yaml
chart/templates/: NOTES.txt  _helpers.tpl  basic_auth_secret.yaml  dipex-configmap.yaml  dipex-deployment.yaml  dipex-secret.yaml  dns-policy.yaml  fixture_loader.yaml  keycloak-admin-secret.yaml  keycloak-deployment.yaml  keycloak-dipex-secret.yaml  keycloak-gen-config.yaml  keycloak-lora-client-secret.yaml  keycloak-lora-dipex-secret.yaml  keycloak-nginx-service.yaml  keycloak-orgviewer-secret.yaml  keycloak-policy.yaml  keycloak-secret.yaml  keycloak-service.yaml  mo-configmap.yaml  mo-deployment.yaml  mo-frontend-deployment.yaml  mo-ingress-basic-auth-secret.yaml  mo-ingress-cert.yaml  mo-ingress.yaml  mo-init-config.yaml  mo-init-job.yaml  mo-policy.yaml  mo-secret.yaml  mo-service.yaml  mox-configmap.yaml  mox-db-deployment.yaml  mox-db-secret.yaml  mox-db-service.yaml  mox-deployment.yaml  mox-policy.yaml  mox-secret.yaml  mox-service.yaml  omada-cronjob.yaml  omada-deployment.yaml  (+19 more)
docs/: GettingStarted.md  NEWS.md  index.md
os2mo/: .helmignore  Chart.yaml  LICENSE  values.schema.json  values.schema.json.license  values.yaml
os2mo/templates/: _helpers.tpl  amqp-url-secret.yaml  deprecation.yaml  keycloak-admin-secret.yaml  mo-frontend-service.yaml  mo-json-config.yaml  (+2 more)
tools/: set_chart_version.sh
(+146 files in other folders)
