# SPDX-FileCopyrightText: 2019-2020 Magenta ApS
# SPDX-License-Identifier: MPL-2.0
[tool.poetry]
name = "os2mo-helm-chart"
version = "2.23.2"
description = "Helm Chart to deploy OS2mo"
authors = ["Emil Madsen <emil@magenta.dk>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.autopub]
git-username = "MagentaBot"
git-email = "info@magenta.dk"
version-strings = ["chart/Chart.yaml"]
